dinoco_docs/src/content/v0.0.2/fr-fr/orm/update-many.md
# update_many

Utilisé pour mettre à jour plusieurs enregistrements à la fois.

---

## Ce que vous pouvez faire

- `.cond(...)`: restreint les enregistrements qui peuvent être mis à jour.
- `.values(Vec&lt;M&gt;)`: définit les éléments utilisés dans la mise à jour par lots.
- `.returning::&lt;T&gt;()`: renvoie les enregistrements mis à jour sous forme de liste typée.
- `.execute(&client)`: exécute la mise à jour par lots.

## Retour

Sans `.returning::&lt;T&gt;()`, le retour est :

```rust
DinocoResult<()>
```

Avec `.returning::&lt;T&gt;()`, le retour devient :

```rust
DinocoResult<Vec<T>>
```

## Exemple de base

```rust
dinoco::update_many::<User>()
    .values(vec![
        User { id: 1, email: "a@acme.com".into(), name: "Ana".into() },
        User { id: 2, email: "b@acme.com".into(), name: "Bia".into() },
    ])
    .execute(&client)
    .await?;
```

## Exemple avec retour

```rust
let updated = dinoco::update_many::<User>()
    .values(vec![
        User { id: 2, name: "Ana Batch".to_string() },
        User { id: 3, name: "Caio Batch".to_string() },
    ])
    .returning::<User>()
    .execute(&client)
    .await?;
```

## Exemple avec filtre

```rust
dinoco::update_many::<User>()
    .cond(|x| x.active.eq(true))
    .values(vec![
        User { id: 10, email: "a@acme.com".into(), name: "Ana".into() },
        User { id: 11, email: "b@acme.com".into(), name: "Bia".into() },
    ])
    .execute(&client)
    .await?;
```

## Exemple avec worker

```rust
use database::*;

let _worker = workers()
    .on::<Vec<User>, _, _>("user.batch-updated", |job| async move {
        // Utilisateurs mis à jour
        println!("Utilisateurs mis à jour : {}", job.data.len());
        job.success();
    })
    .run()
    .await?;

dinoco::update_many::<User>()
    .values(vec![
        User { id: 10, email: "a@acme.com".into(), name: "Ana".into() },
        User { id: 11, email: "b@acme.com".into(), name: "Bia".into() },
    ])
    .enqueue("user.batch-updated")
    .execute(&client)
    .await?;
```

En savoir plus sur les workers dans [**`queues`**](/v0.0.2/orm/queues).

## Prochaines étapes

- [**`update::&lt;M&gt;()`**](/v0.0.1/orm/update): mise à jour traditionnelle avec condition.
- [**`find_and_update::&lt;M&gt;()`**](/v0.0.1/orm/find-and-update): mise à jour atomique d'un seul enregistrement.
